# NEU_OS_Course

./: README.md
task1/: LinuxCommand.md  MCServer.md  Qbittorrent.md  VSCodeServer.md  readme.md
task2/: main.cpp  readme.md
task3/: input.txt  main.c  readme.md
task4/: CMakeLists.txt  main.c  readme.md
task5/: main.c  readme.md
